solved problem overflow table partial

--- a/src/css/myuploadeddocs.css
+++ b/src/css/myuploadeddocs.css
@@ -1,14 +1,15 @@
 .myuploads-user-datatable-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 70px);
-    height: auto;
-    color: darkblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 70px);
+  height: auto;
+  color: darkblue;
 }
 
 .myuploads-user-datatable-main h1{
+  margin-top: 10px;
   text-align: center;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -17,17 +18,21 @@
 }
 
 body.dark .myuploads-user-datatable-main{
-    color: white;
+  color: white;
 }
 
 .myuploaded-docs-datatable-table{
-  width: 80%;
-  animation: wavy-border-data-table 2s infinite;
+  width: 90vw;
+  animation: wavy-border-data-table 2s infinite
+}
+
+.MuiDataGrid-cell{
+  white-space: wrap !important;
 }
 
 body.dark .myuploaded-docs-datatable-table{
-    border: 2px white solid;
-    animation: wavy-border-data-table-white 2s infinite;
+  border: 2px white solid;
+  animation: wavy-border-data-table-white 2s infinite;
 }
 
 body.dark .myuploaded-docs-datatable-table svg,body.dark .myuploaded-docs-datatable-table div{
